[project]
name = "data-processing-api"
version = "0.1.0"
description = "Cloud-native data processing service with PII protection"
requires-python = ">=3.12"
dependencies = [
    "structlog>=24.0.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.5",
    "pymupdf>=1.25.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
